testdata/typechecker/error/multidim/ArrayAcc2.java
int main() {
    int[][] a;
    a = new int[1][2][];
    return 0;
}